<resources>
    <string name="app_name">TRKR</string>
    <string name="before">Before</string>
    <string name="mood">mood</string>
    <string name="submit">SUBMIT</string>
    <string name="after">After</string>
    <string name="incident">Incident</string>
    <string name="memory">Memory</string>
    <string name="load_button">LOAD</string>
    <string name="display">DISPLAY</string>
    <string name="store">STORE</string>
    <string name="clear">CLEAR</string>
</resources>
